...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/group"
            android:title="@string/groups" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/invitations"
            android:title="@string/invitations" />
...
