...
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/edit" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/delete" />

    </LinearLayout>
...
