...
        android:gravity="center"
        android:paddingTop="16dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/settings" />

        <ImageView
...
